--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue-3": "^0.3.12",
     "nuxt": "^3.12.1",
+    "pinia": "^2.1.7",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3"
   }
