--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@pinia/nuxt": "^0.5.1",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-3": "^0.3.12",
+    "moment-timezone": "^0.5.45",
     "nuxt": "^3.12.1",
     "pinia": "^2.1.7",
+    "rss-parser": "^3.13.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3"
+  },
+  "devDependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1"
   }
 }
