--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pinia": "^2.1.7",
     "rss-parser": "^3.13.0",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1"
